<resources>
    <string name="app_name">Visualize</string>

    <string name="action_settings">Settings</string>

    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->

    <!-- Label for the show bass checkbox preference -->
    <string name="pref_show_bass_label">Show Bass</string>
    <!-- Key name for storing bass in SharedPreferences -->
    <string name="pref_show_bass_key" translatable="false">show_bass</string>

    <!-- Summary for Checkboxes -->
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>

    <!-- key for mid-->
    <string name="show_mid_key" translatable="false">show_mid</string>
    <!-- key for treble-->
    <string name="show_treble_key" translatable="false">show_treble</string>

    <!-- name for mid -->
    <string name="show_mid_title">Show Mid</string>
    <!-- name for treble -->
    <string name="show_treble_title">Show Treble</string>

    <string name="colors_key">colors</string>
    <string name="color_title">Color</string>
</resources>
